Fixed title overflow in article, exhibit, reconstruction, removed hover on disabled "Что было дальше/раньше?" buttons

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -15,6 +15,10 @@
 			border: 1px solid #313131;
 			color: #313131;
 			cursor: default;
+			&:hover {
+				border: 1px solid #313131;
+				color: #313131;
+			}
 		}
 	}
 }
@@ -68,6 +72,10 @@
 			border: 1px solid #313131;
 			color: #313131;
 			cursor: default;
+			&:hover {
+				border: 1px solid #313131;
+				color: #313131;
+			}
 		}
 	}
 }
