--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -25,6 +25,9 @@
         }
 
         .title {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
             h1 {
                 font-size: 2em;
                 line-height: 1.2em;
